k8/staging/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: factors-ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  tls:
  - hosts:
    - "*.factors.ai"
    secretName: secret-tls
  rules:
  - host: "staging-api.factors.ai"
    http:
      paths:
      - path: /
        backend:
          serviceName: appserver-service
          servicePort: 80
      - path: /mql
        backend:
          serviceName: appserver-memsql-service
          servicePort: 80
      - path: /adwords
        backend:
          serviceName: pythonappserver-service
          servicePort: 80
      - path: /google_organic
        backend:
          serviceName: pythonappserver-service
          servicePort: 80
      - path: /sdk
        backend:
          serviceName: sdkserver-service
          servicePort: 80
      - path: /integrations/segment
        backend:
          serviceName: sdkserver-service
          servicePort: 80
      - path: /integrations/segment_platform
        backend:
          serviceName: sdkserver-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: appserver-service
          servicePort: 80
  - host: "staging-app.factors.ai"
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 80
  - host: "help.factors.ai"
    http:
      paths:
      - path: /
        backend:
          serviceName: intercom-help
          servicePort: 80
      - path: /*
        backend:
          serviceName: intercom-help
          servicePort: 80
